// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function-to-class 1. function-to-class: 1. function-to-class 1`] = `
"
const MyComponent = ({ a, b, c }) => {
  const result = a + b + c;
  return <div>{result}</div>;
};

      ↓ ↓ ↓ ↓ ↓ ↓

class MyComponent extends React.Component {
  render() {
    const { a, b, c } = this.props;

    const result = a + b + c;
    return <div>{result}</div>;
  }

}
"
`;

exports[`function-to-class 2. function-to-class: 2. function-to-class 1`] = `
"
const MyComponent = ({ a, b, c }) => <div>hello</div>;

      ↓ ↓ ↓ ↓ ↓ ↓

class MyComponent extends React.Component {
  render() {
    const { a, b, c } = this.props;
    return <div>hello</div>;
  }

}
"
`;
